--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
 			<version>2.2.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>3.1.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
@@ -72,6 +79,7 @@
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
 						</exclude>
+						<mainClass>com.baeldung.spring.kafka.KafkaApplication</mainClass>
 					</excludes>
 				</configuration>
 			</plugin>
